; ModuleID = '/home/carl/AnghaBench/esp-idf/components/soc/esp32s2beta/extr_rtc_time.c_rtc_time_get.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/soc/esp32s2beta/extr_rtc_time.c_rtc_time_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RTC_CNTL_TIME_UPDATE_REG = common dso_local global i32 0, align 4
@RTC_CNTL_TIME_UPDATE = common dso_local global i32 0, align 4
@RTC_CNTL_TIME_VALID = common dso_local global i32 0, align 4
@RTC_CNTL_INT_CLR_REG = common dso_local global i32 0, align 4
@RTC_CNTL_TIME_VALID_INT_CLR = common dso_local global i32 0, align 4
@RTC_CNTL_TIME0_REG = common dso_local global i32 0, align 4
@RTC_CNTL_TIME1_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtc_time_get() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @RTC_CNTL_TIME_UPDATE_REG, align 4
  %3 = load i32, i32* @RTC_CNTL_TIME_UPDATE, align 4
  %4 = call i32 @SET_PERI_REG_MASK(i32 %2, i32 %3)
  br label %5

5:                                                ; preds = %10, %0
  %6 = load i32, i32* @RTC_CNTL_TIME_UPDATE_REG, align 4
  %7 = load i32, i32* @RTC_CNTL_TIME_VALID, align 4
  %8 = call i64 @GET_PERI_REG_MASK(i32 %6, i32 %7)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %5
  %11 = call i32 @ets_delay_us(i32 1)
  br label %5

12:                                               ; preds = %5
  %13 = load i32, i32* @RTC_CNTL_INT_CLR_REG, align 4
  %14 = load i32, i32* @RTC_CNTL_TIME_VALID_INT_CLR, align 4
  %15 = call i32 @SET_PERI_REG_MASK(i32 %13, i32 %14)
  %16 = load i32, i32* @RTC_CNTL_TIME0_REG, align 4
  %17 = call i32 @READ_PERI_REG(i32 %16)
  store i32 %17, i32* %1, align 4
  %18 = load i32, i32* @RTC_CNTL_TIME1_REG, align 4
  %19 = call i32 @READ_PERI_REG(i32 %18)
  %20 = shl i32 %19, 32
  %21 = load i32, i32* %1, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %1, align 4
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @SET_PERI_REG_MASK(i32, i32) #1

declare dso_local i64 @GET_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @ets_delay_us(i32) #1

declare dso_local i32 @READ_PERI_REG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
